Fixed spacing of footnote number when more than 1 digit in sidebar.

--- a/css/main.css
+++ b/css/main.css
@@ -2911,24 +2911,25 @@ html, body {
   .image-description .tag-wrapper {
     position: relative; }
   .image-description .tag-no {
-    padding: 1px;
+    padding: 3px;
     background-color: #ffb000;
     border-radius: 50%;
     display: inline-block;
     position: absolute;
     top: 0;
     left: 55px;
-    font-size: 9.17px;
+    font-size: 10px;
     color: #333333;
     cursor: pointer;
     vertical-align: top;
-    width: 16px;
-    height: 16px; }
+    width: 19px;
+    height: 19px; }
     .image-description .tag-no:hover .tag-detail {
       display: block; }
     .image-description .tag-no > .tags-count {
       text-align: center;
-      display: block; }
+      display: block;
+      font-weight: 600; }
   .image-description .tag-detail {
     position: absolute;
     bottom: 100%;
@@ -3517,7 +3518,9 @@ sup {
     .side-popup.footnote .label {
       position: absolute;
       top: 0;
-      left: -19px;
+      left: -28px;
+      width: 22px;
+      text-align: right;
       color: #da4929;
       font-weight: 700; }
   .side-popup .close {
