--- a/scss/components/_component.scss
+++ b/scss/components/_component.scss
@@ -254,7 +254,9 @@ sup {
 		.label {
 			position: absolute;
 			top: 0;
-			left: -19px;
+			left: -28px;
+			width: 22px;
+			text-align: right;
 			color: $orange;
 			font-weight: 700;
 		}
